@@ -1,5 +1,9 @@
 2007-03-17 Benoit Grégoire  <bock@step.polymtl.ca>
 	* install.php: Make sure we are in the right directory when uncompressing Smarty
+	* Avatar.php:  Don't allow user to hyperlink the image.
+	* ProfileTemplate:  Display how many profiles will be affected when deleting a template field.
+	* User.php:  Don't show the profile creation button if the network has no profile template. 
+	 Don't hyperlink the username if the user has no profile.
 
 2007-03-16 Benoit Grégoire  <bock@step.polymtl.ca>
 	* Lots of work on profiles.  The HTML and CSS are not final, but #18 can be considered closed.
@@ -44,7 +48,7 @@
         * Dramatic speedup of PEAR and PECL modules detection by dependencies class
 
 2007-02-25 Benoit Grégoire  <bock@step.polymtl.ca>
-	-* rev [1182], [1183], [1184]  are repositcaory fix commits.  If anyone have problem with their lib directory when upgrading, contact me.
+	-* rev [1182], [1183], [1184]  are repository fix commits.  If anyone have problem with their lib directory when upgrading, contact me.
 
 2007-02-24 Max Horvath <max.horvath@freenet.de>
 	* Fix ticket #300: SYSTEM_PATH not being respected in config.php.
